Modify: 반응형 Nav 추가

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "ntelecom-project",
   "version": "1.0.0",
   "main": "index.js",
+  "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "@mui/styled-engine": "^5.15.14",
