--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.24.0",
     "styled-components": "^6.1.11",
     "styled-reset": "^4.5.2",
