--- a/package.json
+++ b/package.json
@@ -4,18 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.21",
-    "@mui/material": "^5.15.21",
-    "@mui/styled-engine": "^5.15.14",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-icons": "^5.3.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.24.0",
-    "styled-components": "^6.1.11",
-    "styled-reset": "^4.5.2",
     "yarn": "^1.22.22"
   },
   "scripts": {
@@ -26,6 +19,7 @@
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
@@ -36,8 +30,12 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
+    "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
     "prettier": "^3.3.2",
     "style-loader": "^4.0.0",
+    "styled-loader": "^0.0.0",
+    "tailwindcss": "^3.4.15",
     "url-loader": "^4.1.1",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
