--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
