--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.24.0",
     "react-spinners": "^0.14.1",
+    "tailwindcss-preset-px-to-rem": "^1.2.1",
     "yarn": "^1.22.22"
   },
   "scripts": {
